fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ a{
     height: 350px;
     width: 600px;
     padding-top: 10px;
+    margin-bottom: 20px;
 }
 /*Visual Footer*/
 .site-footer{
